8.5.3 (12-12-2022)
- Bug Fix: Support delete reservation tax
- Refactor: Remove association of product and finantial entity with the reservation tax event target

8.5.2 (08-12-2022)
- Bug Fix: Protect with try-catch for NPE, the customer identification and name retrieval in getting the error description, in the debt report
- Improvement: Discount tuition amount from other treasury events with exemption

8.5.1 (23-11-2022)
- Refactor: Replace references of RegistrationStateType for RegistrationStateTypeEnum

8.5.0 (10-11-2022)
- Improvement: Support assign payor debt account to tuition installments

8.4.9 (03-11-2022)
- Improvement: Allow the creation of individual tuition payment plan installments
- Refactor: Replace references of RegistrationStateType for RegistrationStateTypeEnum
- Refactor: Method to create custom academic debts for default finantial entity

8.4.8 (20-10-2022)
- Refactor: Remove references of AdministrativeOffice in AcademicTariff and FinantialEntity

8.4.7 (14-10-2022)
- Refactor: Remove references of AdministrativeOffice in AcademicTariff

8.4.6 (23-09-2022)
- Refactor: Declare AcademicTreasuryEvent::getEventTargetCurrentState to retrieve to current state of the process associated with treasury event

8.4.5 (22-09-2022)
- Refactor: Do not throw exception in service to create customer if it is missing, instead return false if it is not created. The callers decide if exception is thrown or not. If exists return true.
- Improvement: Support creation of sibs payment references for extracurricular or standalone tuition debts, in academic debt generation rule.

8.4.4 (01-08-2022)
- Bug Fix: In finding the best academic tariff, if the administrative office is null then return the tariff for finantial entity

8.4.3 (19-07-2022)
- Refactor: Remove deprecated PaymentPenaltyEventTarget entity
- Refactor: Do not mark AcademicTariff::findMatch by CycleType as not deprecated
- Refactor: Do not register the AdministrativeOffice in the AcademicTariff entity
